@@ -50,6 +50,7 @@ import com.liferay.portal.kernel.util.Constants;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.LocaleUtil;
 import com.liferay.portal.kernel.util.ParamUtil;
+import com.liferay.portal.kernel.util.PropsKeys;
 import com.liferay.portal.kernel.util.PwdGenerator;
 import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.kernel.workflow.WorkflowConstants;
@@ -106,7 +107,8 @@ public class CreateAccountAction extends PortletAction {
 		Company company = themeDisplay.getCompany();
 
 		if (!company.isStrangers()) {
-			throw new PrincipalException();
+			throw new PrincipalException.MustBeEnabled(
+				company.getCompanyId(), PropsKeys.COMPANY_SECURITY_STRANGERS);
 		}
 
 		String cmd = ParamUtil.getString(actionRequest, Constants.CMD);
@@ -292,7 +294,7 @@ public class CreateAccountAction extends PortletAction {
 
 		if (openIdPending) {
 			session.setAttribute(
-				WebKeys.OPEN_ID_LOGIN, new Long(user.getUserId()));
+				WebKeys.OPEN_ID_LOGIN, Long.valueOf(user.getUserId()));
 
 			session.removeAttribute(WebKeys.OPEN_ID_LOGIN_PENDING);
 		}
@@ -357,7 +359,8 @@ public class CreateAccountAction extends PortletAction {
 			themeDisplay.getCompanyId(), emailAddress);
 
 		if (anonymousUser.getStatus() != WorkflowConstants.STATUS_INCOMPLETE) {
-			throw new PrincipalException();
+			throw new PrincipalException.MustBeAuthenticated(
+				anonymousUser.getUuid());
 		}
 
 		UserLocalServiceUtil.deleteUser(anonymousUser.getUserId());
