@@ -125,7 +125,7 @@ public class UsersAdminImpl implements UsersAdmin {
 
 		PortletURL portletURL = renderResponse.createRenderURL();
 
-		portletURL.setParameter("struts_action", "/users_admin/view");
+		portletURL.setParameter("mvcRenderCommandName", "/users_admin/view");
 
 		List<Organization> ancestorOrganizations = organization.getAncestors();
 
@@ -597,15 +597,16 @@ public class UsersAdminImpl implements UsersAdmin {
 	public long[] getGroupIds(PortletRequest portletRequest)
 		throws PortalException {
 
+		long[] groupIds = new long[0];
+
 		User user = PortalUtil.getSelectedUser(portletRequest);
 
-		if (user == null) {
-			return null;
+		if (user != null) {
+			groupIds = user.getGroupIds();
 		}
 
 		return getRequestPrimaryKeys(
-			portletRequest, user.getGroupIds(), "addGroupIds",
-			"deleteGroupIds");
+			portletRequest, groupIds, "addGroupIds", "deleteGroupIds");
 	}
 
 	@Override
@@ -644,7 +645,7 @@ public class UsersAdminImpl implements UsersAdmin {
 		for (int i = 0; i < organizations.size(); i++) {
 			Organization organization = organizations.get(i);
 
-			organizationIds[i] = new Long(organization.getOrganizationId());
+			organizationIds[i] = Long.valueOf(organization.getOrganizationId());
 		}
 
 		return organizationIds;
@@ -654,14 +655,16 @@ public class UsersAdminImpl implements UsersAdmin {
 	public long[] getOrganizationIds(PortletRequest portletRequest)
 		throws PortalException {
 
+		long[] organizationIds = new long[0];
+
 		User user = PortalUtil.getSelectedUser(portletRequest);
 
-		if (user == null) {
-			return null;
+		if (user != null) {
+			organizationIds = user.getOrganizationIds();
 		}
 
 		return getRequestPrimaryKeys(
-			portletRequest, user.getOrganizationIds(), "addOrganizationIds",
+			portletRequest, organizationIds, "addOrganizationIds",
 			"deleteOrganizationIds");
 	}
 
@@ -708,7 +711,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			if (organization == null) {
 				organizations = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(
+				Indexer<Organization> indexer = IndexerRegistryUtil.getIndexer(
 					Organization.class);
 
 				long companyId = GetterUtil.getLong(
@@ -857,14 +860,16 @@ public class UsersAdminImpl implements UsersAdmin {
 	public long[] getRoleIds(PortletRequest portletRequest)
 		throws PortalException {
 
+		long[] roleIds = new long[0];
+
 		User user = PortalUtil.getSelectedUser(portletRequest);
 
-		if (user == null) {
-			return null;
+		if (user != null) {
+			roleIds = user.getRoleIds();
 		}
 
 		return getRequestPrimaryKeys(
-			portletRequest, user.getRoleIds(), "addRoleIds", "deleteRoleIds");
+			portletRequest, roleIds, "addRoleIds", "deleteRoleIds");
 	}
 
 	@Override
@@ -916,14 +921,16 @@ public class UsersAdminImpl implements UsersAdmin {
 	public long[] getUserGroupIds(PortletRequest portletRequest)
 		throws PortalException {
 
+		long[] userGroupIds = new long[0];
+
 		User user = PortalUtil.getSelectedUser(portletRequest);
 
-		if (user == null) {
-			return null;
+		if (user != null) {
+			userGroupIds = user.getUserGroupIds();
 		}
 
 		return getRequestPrimaryKeys(
-			portletRequest, user.getUserGroupIds(), "addUserGroupIds",
+			portletRequest, userGroupIds, "addUserGroupIds",
 			"deleteUserGroupIds");
 	}
 
@@ -993,7 +1000,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			if (userGroup == null) {
 				userGroups = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(
+				Indexer<UserGroup> indexer = IndexerRegistryUtil.getIndexer(
 					UserGroup.class);
 
 				long companyId = GetterUtil.getLong(
@@ -1057,7 +1064,8 @@ public class UsersAdminImpl implements UsersAdmin {
 			if (user == null) {
 				users = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(User.class);
+				Indexer<User> indexer = IndexerRegistryUtil.getIndexer(
+					User.class);
 
 				long companyId = GetterUtil.getLong(
 					document.get(Field.COMPANY_ID));
